# caja-sound-converter

./: .gitignore  Makefile.am  NEWS  README  autogen.sh  configure.ac
data/: Makefile.am  caja-sound-converter.convert  caja-sound-converter.schemas.in  org.mate.caja-sound-converter.gschema.xml.in
po/: LINGUAS  POTFILES.in  de.po  fr.po  hu.po  it.po  sv.po  zh_CN.po
src/: Makefile.am  nsc-converter.c  nsc-extension.c  nsc-gstreamer.c  nsc-gstreamer.h  nsc-xml.c  nsc-xml.h  rb-gst-media-types.c
